--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,6 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/java-7-openjdk-amd64"/>
-	<classpathentry kind="lib" path="lib/soot-2.5.0.jar" sourcepath="lib/sootsources-trunk.jar"/>
+	<classpathentry kind="lib" path="lib/soot-2.5.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
